# FLAIR

./: .gitignore  README.md  build_cohort.py  build_labels.py  clif_config.json  clif_config_template.json  flair_config.yaml.template  pyproject.toml
docs/tasks/: task7_icu_readmission.md
flair/: __init__.py  cli.py
flair/cohort/: __init__.py  builder.py
flair/datasets/: builder.py  splitter.py
flair/tasks/: __init__.py  base.py  task5_icu_los.py  task6_hospital_mortality.py  task7_icu_readmission.py
flair_benchmark/: __init__.py
flair_benchmark/cohort/: __init__.py
flair_benchmark/config/: __init__.py  loader.py  schema.py
flair_benchmark/datasets/: __init__.py  builder.py
flair_benchmark/helpers/: __init__.py  metrics.py  table1.py  tripod_ai.py
flair_benchmark/privacy/: __init__.py  audit_log.py  network_guard.py  phi_detector.py
flair_benchmark/submission/: __init__.py  packager.py  validator.py
flair_benchmark/tasks/: __init__.py  base.py  task1_discharged_home.py  task2_discharged_ltach.py  task3_outcome_72hr.py  task4_hypoxic_proportion.py  task5_icu_los.py  task6_hospital_mortality.py  task7_icu_readmission.py
